<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controller</string>
    <string name="action_settings">Settings</string>
    <string name="rpm_initial_readout">O RPM</string>
    <string name="btn_calibrate_text">Calibrate</string>
    <string name="btn_exit_text">Exit</string>
    <string name="btn_type">Type button 1</string>
    <string name="btn_lable">Lable button 1</string>
    <string name="btn_time">Timeout button 1</string>
    <string name="btn_name">Button 1</string>
    <string name="button_name">Button 1</string>
    <string name="push">Push</string>
    <string name="toggle">Toggle</string>
    <string name="service_stopped_text">Service Stopping</string>
    <string name="button_send">Save changes</string>
    
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    
    
    <string name="title_activity_setup">SetupActivity</string>
    
    <string name="hello_world">pfft!</string>
    
    <string name="hello">hello</string>

</resources>